# customer_service_agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  start.bat  start.sh  test_chat_service.py  test_chat_with_order.py  test_order_direct.py  test_order_query.py  test_points_query.py  test_rag_only.py  test_similarity_search.py
app/: __init__.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  intent_classifier.py  llm_manager.py  rag_retriever.py  session_manager.py  vector_store.py
app/models/: __init__.py  enums.py  schemas.py
app/services/: __init__.py  chat_service.py  knowledge_service.py
app/utils/: __init__.py  helpers.py
config/: settings.py
data/knowledge_base/: faq.json  order_policies.json  order_samples.json  product_info.json
data/vector_db/general_knowledge/: chroma.sqlite3
data/vector_db/order_knowledge/: chroma.sqlite3
data/vector_db/product_knowledge/: chroma.sqlite3
data/vector_db/return_refund_knowledge/: chroma.sqlite3
data/vector_store/embeddings_cache/: 011233b6-30e5-5c65-8ebd-4e3e29267935  157bbf80-fc66-5cec-8022-fb762709493d  243544c5-7715-534f-94ae-97ab73443c96  50ab960c-2d6e-53cd-9dd4-0458aab12ec7  6a5b1b68-9bf9-571b-b4d5-53df1071b942  72e8055b-fed3-5eea-bd8a-227f1714cc7f  79d8054b-b96c-5976-8813-1cb463f70e72  8441eb1f-8093-595a-89cb-9eed99300a98  86f5bc68-b898-5b41-852f-0a90f8c57609  97083c4b-d7be-5546-a6a8-9e2b613cc9ec  (+8 more)
examples/: chat_example.py  knowledge_base_init.py
static/: index.html
static/css/: style.css
static/js/: main.js
templates/: debug.html  index.html
(+5 files in other folders)
